--- a/css/medium.css
+++ b/css/medium.css
@@ -94,7 +94,7 @@ font-size: 1.2rem;
         }
         .collections button {
           width: 50%;
-          font-size: 1.1rem; 
+          font-size: 0.7rem
         }
         .collections div p {
           font-size: 1.2rem;
